--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/springbootdb
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url= jdbc:mysql://localhost:3306/springbootdb
+#spring.datasource.username=root
+#spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
